k8s/inventory.yaml
# Inventory
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  labels: 
    app: inventory-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: localhost:32000/dpm6/inventory:1.0.0-SNAPSHOT
          # The 2 bellow could be used for debugging
          # command: ["sleep"]
          # args: ["10000"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          # volumeMounts:
          #   - name: schema-volume
          #     mountPath: /docker-entrypoint-initdb.d
          #     readOnly: true

---

apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  # annotations:
  #   metallb.universe.tf/address-pool: dpm-custom-addresspool 
spec:
  selector:
    app: inventory
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8081
    nodePort: 31000
