k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-ingress
  namespace: kube-system
spec:
  rules:
  - host: dashboarddmp.com
    http:
      paths: 
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
          # serviceName: kubernetes-dashboard 
          # servicePort: 8443
  # - http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: inventory-service
  #           namespace: kube-system
  #           port:
  #             number: 80
